fix universal build with google, map

--- a/src/app/@layout/components/navbar-item/navbar-item.component.scss
+++ b/src/app/@layout/components/navbar-item/navbar-item.component.scss
@@ -9,5 +9,16 @@
         width: 100%;
       }
     }
+    &__pin {
+      display: none;
+    }
+  }
+
+  &:hover {
+    .navbar-item {
+      &__pin {
+        display: block;
+      }
+    }
   }
 }
