--- a/src/app/@layout/components/navbar-item/_navbar-item.theme.scss
+++ b/src/app/@layout/components/navbar-item/_navbar-item.theme.scss
@@ -1,17 +1,23 @@
 @mixin navbar_item($theme) {
   app-navbar-item {
+    $color: #98979d;
     .navbar-item {
       // TODO get color from material theme
       // color: get_color_from_platte($mat-gray, 50);
-      color: #98979d;
-      &:hover {
-        background-color: rgba(255, 255, 255, 0.08);
-      }
+      color: $color;
       &.active {
         $color: #fff;
         background-color: #1e202d;
         color: $color;
         border-left: 2px solid $color;
+      }
+      &:hover {
+        background-color: rgba(255, 255, 255, 0.08);
+      }
+      &__pin {
+        svg {
+          fill: $color !important;
+        }
       }
     }
   }
