move todo's to cloud application

--- a/src/app/_app.theme.scss
+++ b/src/app/_app.theme.scss
@@ -14,14 +14,8 @@
 .default-theme {
   $primary: mat-palette($mat-blue, 700);
   $accent: mat-palette($mat-blue-gray, 800);
-  
-  // $primary: mat-palette($mat-red, 900);
-  // $accent: mat-palette($mat-red, 300);
   $theme: mat-light-theme($primary, $accent);
   @include application_theme($theme);
-  // $primary: mat-palette($mat-grey, 900);
-  // $accent: mat-palette($mat-blue, 900);
-  // @include mat-form-field-theme(mat-light-theme($primary, $primary));
 }
 
 .second-theme {
@@ -31,4 +25,4 @@
   @include application_theme($theme);
 }
 
-// Uitlity function to get the current theme that applied to application iwde
+// TODO Uitlity function to get the current theme that applied to application wide
