--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -25,6 +25,9 @@ body {
 .text-underline {
   text-decoration: underline;
 }
+.text-nounderline {
+  text-decoration: none;
+}
 .overflow-auto {
   overflow: auto;
 }
@@ -57,9 +60,4 @@ mat-form-field {
       }
     }
   }
-}
-// TODO remove it
-semi-table-actions {
-  display: block;
-  @extend .center-flex;
 }
