remove redundunt scss

--- a/src/app/@layout/components/navbar-collapse/_navbar-collapse.theme.scss
+++ b/src/app/@layout/components/navbar-collapse/_navbar-collapse.theme.scss
@@ -1,4 +1,4 @@
-@import "~assets/scss/utils/functions";
+@import "functions";
 @mixin navbar_collapse($theme) {
   app-navbar-collapse {
     app-navbar-item {
