--- a/src/app/@widget/app-shell-loader/app-shell-loader.component.scss
+++ b/src/app/@widget/app-shell-loader/app-shell-loader.component.scss
@@ -1,4 +1,4 @@
-@import "utils/mixins";
+@import "mixins";
 // TODO use material theme to get the main colors
 $colors: #489d8a #324650 #d34b4c #e8a961;
 $size: 2em;
