--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -1,8 +1,6 @@
-@import "./utils/functions";
-@import "./utils/mixins";
-@import "./utils/variables";
-@import "./helpers/cards";
-@import "./helpers/material-fix";
+@import "functions";
+@import "mixins";
+@import "variables";
 
 html,
 body {
