--- a/src/app/_app.theme.scss
+++ b/src/app/_app.theme.scss
@@ -1,7 +1,7 @@
 @import "@layout/layout.theme";
-@import "~assets/scss/utils/functions";
-@import "~assets/scss/utils/variables";
 @import "~@angular/material/theming";
+@import "functions";
+@import "variables";
 
 @include mat-core();
 
