--- a/src/app/widget/table/components/table-view/table-view.component.scss
+++ b/src/app/widget/table/components/table-view/table-view.component.scss
@@ -1,53 +1,63 @@
+:host {
+  display: block;
+  overflow: auto;
+}
 table {
   width: 100%;
   text-align: center;
   background-color: transparent;
   border-collapse: collapse;
+  ::ng-deep {
+    semi-table-head,
+    semi-table-body {
+      display: contents;
+    }
+  }
   &:not(.disable-default) {
     tr {
-      border-bottom: 1px solid rgba(0, 0, 0, 0.12);
       ::ng-deep {
         th,
         td {
-          vertical-align: bottom;
           text-align: inherit;
+          font-size: 12px;
         }
         th {
+          vertical-align: top;
           font-weight: 500;
+          color: rgba(0, 0, 0, 0.54);
+          // font-size: 12px;
+        }
+
+        td {
+          vertical-align: middle;
+          // font-size: 14px;
         }
       }
     }
     thead {
       tr {
-        &:first-child {
-          ::ng-deep {
-            th {
-              padding: 1rem;
-            }
-          }
-        }
         &:last-child {
           th {
-            padding: 0.5rem;
+            padding: 0 0.5rem 0.5rem;
+            vertical-align: bottom;
             input {
               border-radius: 4px;
               border: 1px solid #ccc;
               width: 100%;
               padding: 0.25rem 0;
+              text-indent: 8px;
             }
           }
-        }
-        .actions {
-          display: flex;
-          justify-content: center;
+          border-bottom: 1px solid rgba(0, 0, 0, 0.12);
         }
       }
     }
     tbody {
       tr {
+        border-bottom: 1px solid rgba(0, 0, 0, 0.12);
         ::ng-deep {
           td {
-            padding: 0.4rem;
+            padding: 0 .25rem;
           }
         }
       }
