--- a/src/app/layout/components/navbar-header/navbar-header.component.html
+++ b/src/app/layout/components/navbar-header/navbar-header.component.html
@@ -1,6 +1,5 @@
 <div class="d-flex align-items-center flex-column text-center">
-  <img class="rounded-circle" width="50" src="http://fedorenkoart.com/wp-content/uploads/2015/02/user2.jpg"
-    alt="User picture">
+  <img class="avatar" ngxGravatar email="ezzabuzaid@hotmail.com" fallback="identicon">
   <div class="text-white text-uppercase text-wrapper drawer-invisible">
     <h6 class="mb-0 mt-2">{{ 'application_title' | translate }} | {{ 'application_name' | translate}}</h6>
     <h6 class="font-weight-light drawer-invisible mb-0">ezzabuzaid</h6>
