--- a/src/app/layout/components/navbar-header/navbar-header.component.scss
+++ b/src/app/layout/components/navbar-header/navbar-header.component.scss
@@ -1,7 +1,17 @@
-
 :host {
   display: block;
   .text-wrapper {
     white-space: nowrap;
+  }
+  .avatar {
+    width: 40px;
+    min-width: 40px;
+    height: 40px;
+    line-height: 40px;
+    margin: 0 8px 0 0;
+    border-radius: 50%;
+    font-size: 17px;
+    font-weight: 600;
+    text-align: center;
   }
 }
