--- a/src/app/pages/users/users-create/users-create.component.html
+++ b/src/app/pages/users/users-create/users-create.component.html
@@ -1,7 +1,5 @@
 <div class="container">
-
-    <app-crud-create [form]="Form">
+    <app-crud-create (submit)="onSubmit()" [form]="Form">
         <span crud-title>Dynamic Fields</span>
     </app-crud-create>
-
 </div>
