setup the generic crud module

--- a/src/app/layout/components/navbar-header/navbar-header.component.html
+++ b/src/app/layout/components/navbar-header/navbar-header.component.html
@@ -1,7 +1,6 @@
-<div class="d-flex align-items-center flex-column text-center">
-  <img class="avatar" ngxGravatar email="ezzabuzaid@hotmail.com" fallback="identicon">
-  <div class="text-white text-uppercase text-wrapper drawer-invisible">
-    <h6 class="mb-0 mt-2">{{ 'application_title' | translate }} | {{ 'application_name' | translate}}</h6>
-    <h6 class="font-weight-light drawer-invisible mb-0">ezzabuzaid</h6>
+<div class="d-flex align-items-center">
+  <img class="mr-3" ngxGravatar email="ezzabuzaid@hotmail.com" fallback="identicon">
+  <div class="text-white text-wrapper drawer-invisible">
+    <h6 class="mb-0 mt-2">{{ 'Buildozer' | translate }} | {{ 'Ezzabuzaid' | translate}}</h6>
   </div>
 </div>
