--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <app-sidebar #sidebar name="navbar">
   <div sidebar-drawer class="sidebar-drawer">
     <header #header>
-      <app-navbar-header class="p-3"></app-navbar-header>
+      <app-navbar-header class="p-3 mat-elevation-z5"></app-navbar-header>
     </header>
     <div>
       <perfect-scrollbar class="position-relative" [config]="{ suppressScrollX: true}">
