--- a/src/app/pages/portal/login/login.component.html
+++ b/src/app/pages/portal/login/login.component.html
@@ -5,22 +5,22 @@
         <mat-card-header class="justify-content-center">
           <mat-card-title class="text-center">
             <h5>Login in to continue</h5>
-            <p class="font-weight-bold">Ligadata</p>
+            <p class="font-weight-bold">Angular Buildozer</p>
           </mat-card-title>
         </mat-card-header>
         <mat-card-content>
           <form [formGroup]="Form">
-            <mat-form-field>
-              <mat-label>{{ 'placeholder_email' | translate }}</mat-label>
-              <input type="email" [formControlName]="getName('email')" matInput autocomplete="email">
+            <mat-form-field id="usernameWrapper">
+              <mat-label>{{ 'placeholder_username' | translate }}</mat-label>
+              <input type="text" [formControlName]="getName('username')" matInput autocomplete="username">
             </mat-form-field>
-            <mat-form-field>
+            <mat-form-field id="passwordWrapper">
               <mat-label>{{ 'placeholder_passowrd' | translate}}</mat-label>
               <input type="password" [formControlName]="getName('password')" matInput>
             </mat-form-field>
             <section>
               <div class="text-right my-3">
-                <button (click)="login()" mat-flat-button color="primary"
+                <button id="submitButton" [disabled]="!Form.valid" (click)="login()" mat-flat-button color="primary"
                   class="text-white text-center w-100">{{ 'button_login' | translate }}</button>
               </div>
             </section>
