--- a/src/app/pages/portal/login/login.component.html
+++ b/src/app/pages/portal/login/login.component.html
@@ -9,18 +9,23 @@
           </mat-card-title>
         </mat-card-header>
         <mat-card-content>
-          <form [formGroup]="Form">
-            <mat-form-field id="usernameWrapper">
+          <!-- TODO: After finishing the auth module consider using form container -->
+
+          <form [formGroup]="form">
+            <ng-container *ngFor="let field of form.fields">
+              <app-form-factory [field]="field"></app-form-factory>
+            </ng-container>
+            <!-- <mat-form-field id="usernameWrapper">
               <mat-label>{{ 'placeholder_username' | translate }}</mat-label>
               <input type="text" [formControlName]="getName('username')" matInput autocomplete="username">
             </mat-form-field>
             <mat-form-field id="passwordWrapper">
               <mat-label>{{ 'placeholder_passowrd' | translate}}</mat-label>
               <input type="password" [formControlName]="getName('password')" matInput>
-            </mat-form-field>
+            </mat-form-field> -->
             <section>
               <div class="text-right my-3">
-                <button id="submitButton" [disabled]="!Form.valid" (click)="login()" mat-flat-button color="primary"
+                <button id="submitButton" [disabled]="!form.valid" (click)="login()" mat-flat-button color="primary"
                   class="text-white text-center w-100">{{ 'button_login' | translate }}</button>
               </div>
             </section>
