add login, register and user list

--- a/src/app/pages/generic-crud/generic-write/generic-write.component.html
+++ b/src/app/pages/generic-crud/generic-write/generic-write.component.html
@@ -1,7 +1,7 @@
 <app-form-container (onSubmit)="onSubmit()" [title]="module?.title">
     <section form-body>
         <ng-container *ngFor="let field of module?.form.fields">
-            <app-form-factory [field]="field"></app-form-factory>
+            <app-field-factory [field]="field"></app-field-factory>
         </ng-container>
     </section>
 </app-form-container>
