--- a/src/app/pages/portal/login/login.component.html
+++ b/src/app/pages/portal/login/login.component.html
@@ -10,31 +10,18 @@
         </mat-card-header>
         <mat-card-content>
           <!-- TODO: After finishing the auth module consider using form container -->
-
           <form [formGroup]="form">
-            <ng-container *ngFor="let field of form.fields">
-              <app-form-factory [field]="field"></app-form-factory>
-            </ng-container>
-            <mat-checkbox #rememberMeCheckBox>Remember me!</mat-checkbox>
-            <!-- <mat-form-field id="usernameWrapper">
-              <mat-label>{{ 'placeholder_username' | translate }}</mat-label>
-              <input type="text" [formControlName]="getName('username')" matInput autocomplete="username">
-            </mat-form-field>
-            <mat-form-field id="passwordWrapper">
-              <mat-label>{{ 'placeholder_passowrd' | translate}}</mat-label>
-              <input type="password" [formControlName]="getName('password')" matInput>
-            </mat-form-field> -->
-            <section>
-              <div class="text-right my-3">
-                <button id="submitButton" [disabled]="!form.valid" (click)="login(rememberMeCheckBox)" mat-flat-button color="primary"
-                  class="text-white text-center w-100">{{ 'button_login' | translate }}</button>
-              </div>
-            </section>
+            <app-field-factory *ngFor="let field of form.fields" [field]="field"></app-field-factory>
+            <mat-checkbox id="rememberMe" #rememberMeCheckBox>Remember me!</mat-checkbox>
+            <div class="text-right my-3">
+              <button id="submitButton" [disabled]="!form.valid" (click)="login(rememberMeCheckBox)" mat-flat-button
+                color="primary" class="text-white text-center w-100">{{ 'button_login' | translate }}</button>
+            </div>
           </form>
         </mat-card-content>
         <mat-card-actions>
-          <a mat-button class="text-nounderline" [routerLink]="['../', 'register']">
-            <small class="text--accent">{{ 'button_signup_for_an_account' | translate }}</small>
+          <a mat-button class="text-nounderline" id="registerButton" [routerLink]="['../', 'register']">
+            <small class="text--accent">{{ 'button_signup' | translate }}</small>
           </a>
         </mat-card-actions>
       </mat-card>
