--- a/src/app/partials/form/form-factory/form-factory.component.html
+++ b/src/app/partials/form/form-factory/form-factory.component.html
@@ -5,9 +5,21 @@
     </mat-form-field>
 </ng-container>
 <ng-container *ngIf="field.typeOf(types.PASSWORD)">
+    <!-- TODO: provide style object in Field class, it should be flutter like style, 
+        new Field(
+            style: {
+                prefix:,
+                suffix:,
+            },
+        );
+
+        and split the field to be base class in order to RawField to extend it.
+        RawField shouldn't have the style object.
+    -->
     <mat-form-field>
         <mat-label>{{field.label}}</mat-label>
-        <input type="password" autocomplete="new-password" matInput [formControl]="field">
+        <input #input type="password" autocomplete="new-password" matInput [formControl]="field">
+        <mat-icon (click)="input.type === 'text' ? 'password' : 'text'" matSuffix>lock</mat-icon>
     </mat-form-field>
 </ng-container>
 <ng-container *ngIf="field.typeOf(types.TEXTAREA)">
@@ -46,7 +58,7 @@
         <mat-label>{{field.label}}</mat-label>
         <mat-select [formControl]="field">
             <mat-option *ngFor="let option of field.options" [value]="option.value">
-                {{option.label}}
+                {{option.title}}
             </mat-option>
         </mat-select>
     </mat-form-field>
@@ -56,7 +68,7 @@
         <mat-label>{{field.label}}</mat-label>
         <mat-select [formControl]="field" [multiple]="true">
             <mat-option *ngFor="let option of field.options" [value]="option.value">
-                {{option.label}}
+                {{option.title}}
             </mat-option>
         </mat-select>
     </mat-form-field>
@@ -65,14 +77,19 @@
     <mat-label>{{field.label}}</mat-label>
     <mat-radio-group class="d-flex flex-column">
         <mat-radio-button *ngFor="let option of field.options" [value]="option.value">
-            {{option.label}}
+            {{option.title}}
         </mat-radio-button>
     </mat-radio-group>
 </ng-container>
-<!-- <app-mobile-control
-        [dialCode]="data.phoneNumberCountryCode"
-        [formControlName]="filed.name">
-    </app-mobile-control> -->
+<ng-container *ngIf="field.typeOf(types.TEL)">
+    <!-- TODO: {
+        new RawField({
+            component: MobileControlComponent,
+            ...fieldOptions
+        });
+    } -->
+    <app-mobile-control [formControl]="field">
+    </app-mobile-control>
+</ng-container>
 <!-- <app-country-control [formControlName]="getName('countryCode')"></app-country-control> -->
-<!-- TODO: Setup mobile(TEL) type -->
 <!-- TODO: Setup datetime type -->
