--- a/src/app/widget/inifinite-scroll-fetching/inifinite-scroll-fetching.component.html
+++ b/src/app/widget/inifinite-scroll-fetching/inifinite-scroll-fetching.component.html
@@ -1,3 +1,3 @@
-<app-scroll-detection (scrolledDown)="scrolledDown()" [scrollContainerSelector]="scrollContainerSelector">
+<app-scroll-detection (onScroll)="onScroll($event)" [scrollContainerSelector]="scrollContainerSelector">
     <ng-content></ng-content>
 </app-scroll-detection>
