--- a/src/app/widget/mobile-control/mobile-control.component.html
+++ b/src/app/widget/mobile-control/mobile-control.component.html
@@ -1,6 +1,6 @@
-<mat-form-field [floatLabel]="floatType">
+<mat-form-field floatLabel="always">
     <mat-label>Phonenumber</mat-label>
-    <input matInput autocomplete="tel" [formControl]="control" [autofocus]="true" #phoneField id="{{id}}-phonenumber"
+    <input matInput autocomplete="tel" [formControl]="control" [autofocus]="true" #phoneField [id]="id"
         (input)="updateModel(phoneField?.value)">
     <mat-error *ngIf="control.hasError('not_associated')">The number is not valid</mat-error>
 </mat-form-field>
