--- a/src/app/widget/scroll-detection/scroll-detection.component.html
+++ b/src/app/widget/scroll-detection/scroll-detection.component.html
@@ -1,4 +1,5 @@
 <section class="w-100" infiniteScroll [infiniteScrollUpDistance]="5" [infiniteScrollThrottle]="10"
-  [infiniteScrollContainer]="scrollContainerSelector" [fromRoot]="true" (scrolled)="scroll('down')" (scrolledUp)="scroll('up')">
+  [infiniteScrollContainer]="scrollContainerSelector" [fromRoot]="true" (scrolled)="scroll('down')"
+  (scrolledUp)="scroll('up')">
   <ng-content></ng-content>
 </section>
