--- a/src/app/layout/components/navbar-collapse/navbar-collapse.component.scss
+++ b/src/app/layout/components/navbar-collapse/navbar-collapse.component.scss
@@ -1,5 +1,5 @@
-@import 'mixins';
-@import 'variables';
+@import "mixins";
+@import "variables";
 :host {
   display: block;
   $transition-duration: 0.35s;
@@ -35,7 +35,7 @@
     // }
   }
   &.expanded {
-    background-color: #1e202d;
+    background-color: #fff;
     app-navbar-item {
       mat-icon {
         transform: rotate(180deg);
