--- a/src/app/layout/toolbar/toolbar.component.html
+++ b/src/app/layout/toolbar/toolbar.component.html
@@ -23,3 +23,32 @@
     </button>
   </mat-menu>
 </div>
+
+<!-- <div class="seperator bg--primary"></div>
+<button class="toolbar-button" (click)="toggleFullScreen()" mat-icon-button>
+  <mat-icon color="primary">fullscreen</mat-icon>
+  <span></span>
+</button>
+<div class="seperator bg--primary"></div>
+<button class="toolbar-button" [routerLink]="[routes.CHAT.withSlash]" mat-icon-button>
+  <mat-icon color="primary">chat</mat-icon>
+</button>
+<div class="seperator bg--primary"></div>
+<button mat-button [matMenuTriggerFor]="userMenu" class="user-button h-100">
+  <div class="center-flex h-100">
+    <img class="avatar mr-0 mr-sm-16" fallback="identicon" [src]="user?.avatar || 'assets/images/avatar.svg'"
+      ngxGravatar [preferGravatar]="false">
+    <span class="username mx-4">{{user.name}}</span>
+    <mat-icon role="img" aria-hidden="true">keyboard_arrow_down</mat-icon>
+  </div>
+</button>
+<mat-menu #userMenu="matMenu" [overlapTrigger]="false">
+  <button mat-menu-item [routerLink]="[routes.ADMINS.withSlash, user.jti]">
+    <mat-icon>account_circle</mat-icon>
+    <span>My Profile</span>
+  </button> 
+  <button mat-menu-item (click)="logout()">
+    <mat-icon>exit_to_app</mat-icon>
+    <span>Logout</span>
+  </button>
+</mat-menu> -->
