enhance navbar item

--- a/src/app/layout/components/navbar-header/navbar-header.component.html
+++ b/src/app/layout/components/navbar-header/navbar-header.component.html
@@ -4,3 +4,10 @@
     <h6 class="mb-0 mt-2">{{ 'Buildozer' | translate }} | {{ 'Ezzabuzaid' | translate}}</h6>
   </div>
 </div>
+
+<!-- TODO: test it out -->
+<!-- <div class="d-flex align-items-center justify-content-between">
+  <img src="assets/images/icons/Logo.svg" [class.d-none]="toggled" alt="Logo">
+  <img class="toggle-icon  pointer" [class.active]="toggled" src="assets/images/icons/Close Menu.svg"
+    (click)="toggleSidebar()" width="50" height="50" alt="toggle menu">
+</div> -->
