--- a/src/app/layout/container/container.component.html
+++ b/src/app/layout/container/container.component.html
@@ -1,11 +1,9 @@
 <app-navbar>
   <app-content>
     <main class="flex-fill d-flex flex-column h-100">
-      <nav class="bg-white mat-elevation-z1">
-        <app-toolbar class="h-100 w-100 p-2 d-flex justify-content-end align-items-center"></app-toolbar>
-      </nav>
+      <app-toolbar class="w-100 d-flex justify-content-end align-items-center bg-white mat-elevation-z1"></app-toolbar>
       <section class="position-relative router-container h-100">
-        <router-outlet #routerOutlet="outlet"></router-outlet>
+        <router-outlet></router-outlet>
       </section>
       <app-footer class="p-3"> </app-footer>
     </main>
