--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -1,16 +1,15 @@
-@import 'variables';
-@import 'mixins';
-@import 'functions';
+@import "variables";
+@import "mixins";
+@import "functions";
 
-$navbar-width: map-deep-get($layout_dimensions, 'navbar-width', xLarge);
-$navbar-folded-width: map-deep-get($layout_dimensions, 'navbar-width', folded);
-$navbar-mobile-width: map-deep-get($layout_dimensions, 'navbar-width', small);
-$toolbar-height: map-deep-get($layout_dimensions, 'toolbar-height');
-
+$navbar-width: map-deep-get($layout_dimensions, "navbar-width", xLarge);
+$navbar-folded-width: map-deep-get($layout_dimensions, "navbar-width", folded);
+$navbar-mobile-width: map-deep-get($layout_dimensions, "navbar-width", small);
+$toolbar-height: map-deep-get($layout_dimensions, "toolbar-height");
 :host {
   app-sidebar {
     .sidebar-drawer {
-      background-color: #262f3d;
+      background-color: #fff;
     }
     --width: #{$navbar-width};
     &.toggled {
@@ -20,6 +19,7 @@ $toolbar-height: map-deep-get($layout_dimensions, 'toolbar-height');
           .drawer-invisible {
             transition: visibility 0s linear 0.2s;
             visibility: hidden;
+            display: none;
           }
         }
       }
