--- a/src/app/layout/toolbar/toolbar.component.html
+++ b/src/app/layout/toolbar/toolbar.component.html
@@ -13,11 +13,11 @@
   </button>
 
   <mat-menu #menu="matMenu">
-    <button (click)="changeLanguage('ar')" mat-menu-item>
+    <button (click)="changeLanguage(languageEnum.AR)" mat-menu-item>
       <img style="width:10%" src="assets/images/flags/sa.svg" alt="Arabic">
       <span class="mx-3">{{ 'arabic' | translate }}</span>
     </button>
-    <button (click)="changeLanguage('en')" mat-menu-item>
+    <button (click)="changeLanguage(languageEnum.EN)" mat-menu-item>
       <img style="width:10%" src="assets/images/flags/us.svg" alt="English">
       <span class="mx-3">{{ 'english' | translate }}</span>
     </button>
