fix navar height style

--- a/src/app/layout/components/navbar-header/navbar-header.component.html
+++ b/src/app/layout/components/navbar-header/navbar-header.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex align-items-center">
   <img class="mr-3" ngxGravatar email="ezzabuzaid@hotmail.com" fallback="identicon">
-  <div class="text-white text-wrapper drawer-invisible">
+  <div class="text-wrapper drawer-invisible">
     <h6 class="mb-0 mt-2">{{ 'Buildozer' | translate }} | {{ 'Ezzabuzaid' | translate}}</h6>
   </div>
 </div>
