fix build on develop

--- a/src/app/widget/sidebar/sidebar.component.scss
+++ b/src/app/widget/sidebar/sidebar.component.scss
@@ -1,6 +1,6 @@
-@import "variables";
-@import "mixins";
-@import "~@angular/material/theming";
+@import 'variables';
+@import 'mixins';
+@import '~@angular/material/theming';
 $transition-timing: ease-in-out;
 $transition-duration: 0.25s;
 :host {
