--- a/src/app/layout/components/navbar-collapse/navbar-collapse.component.scss
+++ b/src/app/layout/components/navbar-collapse/navbar-collapse.component.scss
@@ -1,5 +1,5 @@
-@import "mixins";
-@import "variables";
+@import 'mixins';
+@import 'variables';
 :host {
   display: block;
   $transition-duration: 0.35s;
