update to angular 9-rc

--- a/src/app/pages/generic-crud/generic-read/generic-read.component.html
+++ b/src/app/pages/generic-crud/generic-read/generic-read.component.html
@@ -4,8 +4,8 @@
             <mat-card-title>{{ module?.title }}</mat-card-title>
         </mat-card-header>
         <mat-card-content>
-            <ng2-smart-table [settings]="module?.settings" [source]="source" (create)="create()" (edit)="edit($event)">
-            </ng2-smart-table>
+            <!-- <ng2-smart-table [settings]="module?.settings" [source]="source" (create)="create()" (edit)="edit($event)">
+            </ng2-smart-table> -->
         </mat-card-content>
         <mat-divider></mat-divider>
         <mat-card-footer>
