--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<app-sidebar #sidebar name="navbar">
+<app-sidebar name="navbar">
   <div sidebar-drawer class="sidebar-drawer mat-elevation-z1">
     <header #header>
       <app-navbar-header class="p-3"></app-navbar-header>
