add users to chat bar, send device id with all request

--- a/src/app/layout/container/container.component.html
+++ b/src/app/layout/container/container.component.html
@@ -5,12 +5,12 @@
       <section class="position-relative router-container h-100">
         <app-sidebar name="chat_bar" class="right">
           <div sidebar-drawer class="border-left">
-            <mat-list dense>
-              <mat-list-item *ngFor="let user of [1, 2, 3, 4, 5, 6]">
-                <img matListAvatar ngxGravatar email="ezzabuzaid@hotmail.com" fallback="identicon">
-                <p matLine> ezzabuzaid-{{user}} </p>
+            <mat-nav-list dense>
+              <mat-list-item *ngFor="let user of ($users | async)" (click)="openPrompt()">
+                <img matListAvatar ngxGravatar [email]="user.email" fallback="identicon">
+                <p matLine> {{user.username}} </p>
               </mat-list-item>
-            </mat-list>
+            </mat-nav-list>
           </div>
           <div sidebar-container>
             <h1>Angular Buildozer</h1>
