--- a/src/app/widget/popup/prompt/prompt.component.html
+++ b/src/app/widget/popup/prompt/prompt.component.html
@@ -1,10 +1,12 @@
-<!-- <h5 >{{ data?.title || ('complete' | translate) }}</h5>
+<h5>{{ data?.title || ('complete' | translate) }}</h5>
 <div mat-dialog-content>
   <p>{{ data?.description }}</p>
-  <mat-form-field appearance="fill">
+  <mat-form-field cdkFocusInitial>
     <input [(ngModel)]="result" required type="text" matInput>
   </mat-form-field>
 </div>
 <div mat-dialog-actions class="justify-content-end">
-  <button color="accent" class="text-white" mat-flat-button cdkFocusInitial>{{ 'confirm' | translate }}</button>
-</div> -->
+  <button color="accent" class="text-white" mat-flat-button [mat-dialog-close]="result">
+    {{ 'confirm' | translate }}
+  </button>
+</div>
