--- a/src/app/layout/container/container.component.scss
+++ b/src/app/layout/container/container.component.scss
@@ -19,7 +19,7 @@
     --width: 230px;
     [sidebar-drawer] {
       background-color: get_color_from_platte($mat-gray, 50);
-      mat-list {
+      mat-nav-list {
         img {
           width: 30px !important;
           height: 30px !important;
