--- a/src/app/layout/container/container.component.scss
+++ b/src/app/layout/container/container.component.scss
@@ -1,7 +1,7 @@
-@import "functions";
-@import "mixins";
-@import "variables";
-@import "~@angular/material/theming";
+@import 'functions';
+@import 'mixins';
+@import 'variables';
+@import '~@angular/material/theming';
 
 :host {
   app-toolbar {
