--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -1,11 +1,11 @@
-@import "variables";
-@import "mixins";
-@import "functions";
+@import 'variables';
+@import 'mixins';
+@import 'functions';
 
-$navbar-width: map-deep-get($layout_dimensions, "navbar-width", xLarge);
-$navbar-folded-width: map-deep-get($layout_dimensions, "navbar-width", folded);
-$navbar-mobile-width: map-deep-get($layout_dimensions, "navbar-width", small);
-$toolbar-height: map-deep-get($layout_dimensions, "toolbar-height");
+$navbar-width: map-deep-get($layout_dimensions, 'navbar-width', xLarge);
+$navbar-folded-width: map-deep-get($layout_dimensions, 'navbar-width', folded);
+$navbar-mobile-width: map-deep-get($layout_dimensions, 'navbar-width', small);
+$toolbar-height: map-deep-get($layout_dimensions, 'toolbar-height');
 :host {
   app-sidebar {
     --width: #{$navbar-width};
